+ fix bag card, repair gulp and docs z-index and other

--- a/assets/blocks/card/card.styl
+++ b/assets/blocks/card/card.styl
@@ -65,6 +65,11 @@
 			top: 40%
 		@media (max-width: $screen-xs-min)
 			top: 38%
+		&_res
+			@media (max-width: $screen-md-min)
+				font-size: 2rem
+			@media (max-width: $screen-phone-min)
+				font-size: 2.5rem
 	&__text
 		position: absolute
 		margin: 0
